--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,17 @@
 /* write your override styles here */
+
+#wall .tag-1 {
+  display: none;
+}
+
+#wall .tag-1 ~ div {
+  display: none;
+}
+
+#wall .tag-1 + div#tag-2 {
+  display: none;
+}
+
+#wall #tag-3.slick.wicked {
+  display: none;
+}
