--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,14 @@
 /* write your override styles here */
+body div#wall .tag-1 {
+  display: none;
+}
+body div#wall #tag-2{
+	display: none;
+}
+body div#wall #tag-3.slick{
+  display: none;
+}
+
+body div#wall .parent {
+  display: none;
+}
